--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,68 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="/assets/css/bootstrap.css">
+  <link rel="font_awesome" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <style>
+    .move-icon {
+      font-size: 144px;
+    }
+  </style>
 </head>
 <body>
 
-<%= yield %>
+  <div class = "container">
+    <hr>
+      <div class = "row">
+        <div class = "col-md-8 col-md-offset-2 col-xs-12">
+          <div class = "btn-group btn-group-justified">
+            <a href="/rock" class = "btn btn-block btn-primary"> Play Rock </a>
+            <a href="/paper" class = "btn btn-block btn-primary"> Play Paper </a>
+            <a href="/scissors" class = "btn btn-block btn-primary"> Play Scissors </a>
+          </div>
+        </div>
+      </div>
+
+    <hr>
+    <div class = "row">
+      <div class = "col-md-4 col-md-offset-2 col-xs-6">
+        <div class = "panel panel-success">
+          <div class = "panel-heading">
+            <h2 class = "panel-title text-center"> <%=yield%> </h2>
+          </div>
+          <div class = "panel-body text-center">
+            <i class = "fa move-icon fa-hand-rock-o"></i>
+          </div>
+        </div>
+      </div>
+
+    <div class="col-md-4 col-xs-6">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h2 class="panel-title text-center"> <%= @computer_move %> </h2>
+        </div>
+        <div class = "panel-body text-center">
+          <i class = "fa move-icon fa-hand-paper-o"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+  <div class="col-md-12">
+    <div class="well text-center">
+      <h1>
+
+        <span class="label label-danger">
+          You <%= @outcome %>
+        </span>
+      </h1>
+    </div>
+  </div>
+</div>
+
+</div>
 
 </body>
 </html>
